--- a/education.html
+++ b/education.html
@@ -7,8 +7,8 @@
   <title>Education Course Information Scope Exam Details | EDUPROV</title>
   <meta name="description" content="Education is the study of the process of receiving and giving systematic instruction. AS a degree, it mixes a theoretical grounding in the history, anthropology, sociology
   " />
-<meta name="keywords" content="
-  
+<meta name="keywords" content="education course,bachelor of education,teacher training courses,montessori teacher,best computer courses after 12th,teaching education,teacher education program,professional development courses,ba education,preservice teachers,pre service teacher education,ncte recognized teacher education programme,education courses for teachers,education honours,ba ed,montessori training near me,nursery teacher training course online,montessori training course,teacher preparation,preschool teacher training,teacher education institute,teacher and teaching education,ncte teacher education programme,ba education subject,ncte recognised teacher education programme,orientation programme for teachers,national teacher training,teacher preschool,schools for education,postgraduate teacher training,professional development courses for teachers,educator preparation program,one education courses,summer courses for teachers 2020,becoming a preschool teacher,becoming a kindergarten teacher,montessori training institute,best schools for education,teacher development program,four semester teacher education program,teacher ma,best teaching schools,preschool teacher education,faculty of teacher training and education,post secondary teacher,ba education studies,one year teaching course,secondary education teacher,school induction,schools for teaching,faculty development programme for teachers 2020,secondary school teacher training,montessori school teacher,professional development for preschool teachers,second career for teachers,teacher leadership programs,orientation and refresher courses in teacher education,school of education rankings,ba education honours,school induction programme,teacher librarian courses,professional development training for teachers,teacher development courses,night school teacher,programs for teachers,secondary education programs,education to become a teacher,montessori training institute near me,ncte approved courses,student teaching program,preschool teacher schooling,new teacher induction,good schools for teaching,best teaching programs,school of teacher education,professional teaching courses,teacher education and teacher training,post secondary teaching,national academy of teacher training and education,school teacher course,best teacher education programs,teacher education programs of developed countries,best teaching schools in the us,montessori teacher education,senior leadership courses for teachers,nursery teacher education programme,new teacher education curriculum,school education online,school education program,national school of education and teaching,teacher education programme recognised by ncte,teacher education development program,office of teacher education,orientation course in teacher education,educator preparation program online,bachelor of teaching course,programme in grade r teaching,
+
   " />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="dist/css/bootstrap.css" />
@@ -42,9 +42,9 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         
         <div class="navbar-nav ml-auto ">
-          <a href="index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-          <a href="contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-          <a href="student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+          <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+          <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-university"></i> Admission</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-users"></i> Counselling</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-globe"></i> Study Abroad</a>
@@ -87,7 +87,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/Bachelor-of-education-course.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/course/Bachelor-of-education-course.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Education</label>
@@ -123,7 +123,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/master-of-education-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/master-of-education-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Master of Education</label>
