--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="google-site-verification" content="sGemaMk14xYeehQTUUDM9YvubBurbC6n6yymjqDP8io" />
  <link rel="canonical" href="https://eduprov.com/" />
-  <title>EDUPROV Admission Guidance, Career Counselling | EDUPROV</title>
+  <title>EDUPROV Admission Guidance, Career Counselling </title>
   <meta name="description" content="  HIT THE BEST TOP NOTCHED UNIVERSITIES, GET A GRIP ON ADMISSION
   GUIDANCE AND TRAVEL THE WORLD WITH THE BEST UNIVERSITIES" />
   <meta name="keywords" content="study abroad,career counselling,career guidance,study abroad consultants,career consultant,mbbs abroad,career counselor near me,overseas education consultants,career counselling online,best countries to study abroad,overseas education,abroad education consultants,study mbbs abroad,career counselling for students,best countries to study,abroad consultancy,scholarships for indian students to study abroad,abroad countries,best countries for mbbs,admission guidance,apply abroad,study overseas,education abroad,career guidance for students,i want to study abroad for free,mbbs in abroad for indian students at low cost,mbbs abroad consultants,best countries for international students,foreign study,study abroad for indian students,abroad education,career guidance counselor,online career guidance,scholarships abroad,study abroad agency,career counselling services,career guidance and counselling,counselling career,foreign education consultants,career counselling websites,i want to study abroad,school abroad,scholarships for indian students to study abroad after 12th,study abroad counselling,career counsellors near me,study abroad after 12th,mbbs in foreign countries,abroad places,mbbs abroad for indian students,indian students abroad,career guidance near me,courses abroad,mba abroad at low cost,career guidance services,career counselling after 12th,education overseas,mbbs consultancy,career counselling after 10th,mbbs admission abroad,best overseas education consultants,study overseas consultants,engineering abroad,courses to study abroad,scholarships for mba abroad,scholarships for indian students to study abroad after 10th,study abroad after 12th science,study abroad after 10th,online career counselling for working professionals,best countries for students,mbbs in foreign,best career counsellor,abroad mbbs admission,study abroad after 12th commerce,best countries for indian students,best career counselling online,best study abroad consultants,career counselling for experienced professionals,educational counsellor near me,study mbbs abroad consultants,going abroad for studies,international scholarships for indian students after 12th,career counselling for professionals,foreign study consultancy,abroad courses after 12th,best education consultants,careers in counselling psychology,study abroad education consultants,abroad admission consultants,medical study abroad,m tech in abroad,abroad scholarships for indian students,career guidance consultant,career counselling centres,study abroad organizations,abroad experience,study abroad 2021,abroad programs,medical school abroad,international study abroad,outplacement counselling,find a career counselor,graduate school abroad,science abroad,education and career guidance,career guidance and counselling for students,institute for study abroad,scholarships for engineering students to study abroad,best abroad,affordable countries to study,study abroad 2020,study language abroad,professional career guidance,counselor career path,postgraduate study abroad,study abroad after graduation from india,education career guidance,courses after bca in abroad,best career guidance,scholarships for ghanaian students to study abroad,study abroad after 12th medical,courses to study abroad after 12th commerce,scholarships for indian students to study abroad after 12th commerce,career counselling after graduation,counselling for students after 12th,mbbs in other countries,best consultancy for mbbs abroad,architecture abroad for indian students,education abroad program,top countries for mbbs,medical school overseas,abroad for study,executive study abroad,overseas medical education consultants,best online career counselling,civil engineering study abroad,medical study abroad programs,i need a career counselor,best career counselor near me,best abroad education consultants,counselling after 12th,short courses abroad,medical study abroad for indian students,best career counsellor near me,top places to study abroad,i want to go to abroad,i need career guidance,med school abroad,international study abroad programs,medical scholarships abroad,abroad scholarships 2020,civil engineering abroad,career counselling for teachers,overseas education services,best places to study abroad for business,mba in international marketing abroad,apply for scholarships abroad,study abroad after 12th arts,study abroad medical school,career guidance counsellor near me,need of career counselling,online career counselling after 12th,scholarships for indian students to study abroad for masters,foreign courses after 12th,fie study abroad,school overseas,study abroad after 10th class,mbbs education consultants,expert overseas education consultants,school abroad programs,mbbs admission guidance,ai based career counselling,courses after bhms in abroad,2021 study abroad,mba career counselling,need of career guidance,after mbbs abroad,introduction to career counselling & coaching,career guidance for students after 12th,study overseas after spm,career counselling for medical students,neet counselling guidance,a career counselor,career and guidance,career guidance for working professionals,career guidance and development,medical career counselling,counselor near me for career,career guidance advice,online career counselling after 10th,talk to a career counselor,career change counselling,career and guidance counselling,career development counselor,educational counselor near me,career counselling for graduates,find a career counselor near me,guidance counselor careers,career counselling business,career counselor education,career guidance and career counselling,educational and vocational guidance counsellor,international career counselor,career guidance for 10th students,career counselling for students after 12th,career guidance for students after 10th,counselling career options,career counselling centres near me,career counselling sites,career counselling for students after 10th,need career guidance,counselling for 12th students,career advice counselling,career counselling for engineering students,best career counsellor online,career counselling for commerce students,career counselling assessment,career in career counselling,need career counselling,best online career counselling sites,career guidance assessments,career counselling and guidance in the workplace,career counselling in,counselling for career planning,top career consultant,i need a career advisor,career counselling usa,career development and counselling,online career counselling after graduation,best career consultant,career counselor for engineering,mba counsellor near me,career guidance for 12th students,top career counselling companies in the world,education career counselling,career planning in counselling psychology,talk to a career counselor online,neet ug counselling guidance,good career counselor,career planning guidance,career guidance coach,career counselling for fashion designing,career counselling for housewives,career counselling for science students,top career counsellors,career counselling for 12th students,introduction to career counselling,best free online career counselling,counselling for 10th std students,career counselling services near me," />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="EDUPROV  - Explore Top Colleges, Courses, Fees and Exams" />
-  <meta property="og:url" content="" />
+  <meta property="og:title" content="EDUPROV Admission Guidance, Career Counselling" />
+  <meta property="og:url" content="https://eduprov.com/" />
   <meta property="og:site_name" content="Eduprov" />
-  <meta property="og:description" content="EDUPROV  - Explore Top Colleges, Courses, Fees and Exams" />
-  <meta property="og:image" content="" />
+  <meta property="og:description" content="HIT THE BEST TOP NOTCHED UNIVERSITIES, GET A GRIP ON ADMISSION
+     GUIDANCE AND TRAVEL THE WORLD WITH THE BEST UNIVERSITIES" />
+  <meta property="og:image" content="https://i.ibb.co/026GNwM/Whats-App-Image-2021-05-12-at-14-25-17.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="" />
-  <meta name="twitter:title" content="Eduprov - Explore Top Colleges, Courses, Fees and Exams" />
-  <meta name="twitter:description" content="Explore Top Colleges, Courses, Fees and Exams" />
-  <meta name="twitter:image" content="" />
-  <meta name="twitter:url" content="" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="EDUPROV Admission Guidance, Career Counselling" />
+  <meta name="twitter:description" content="HIT THE BEST TOP NOTCHED UNIVERSITIES, GET A GRIP ON ADMISSION
+  GUIDANCE AND TRAVEL THE WORLD WITH THE BEST UNIVERSITIES" />
+  <meta name="twitter:image" content="https://i.ibb.co/026GNwM/Whats-App-Image-2021-05-12-at-14-25-17.jpg" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
   <link rel="apple-touch-icon" href="/images/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -68,12 +70,12 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
           
           <div class="navbar-nav ml-auto ">
-            <a href="index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-            <a href="contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-            <a href="student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+            <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+            <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+            <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
             <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-university"></i> Admission</a>
             <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-users"></i> Counselling</a>
-            <a href="exams.html" class="nav-item text-white nav-link active"><i class="fa fa-book"></i> Exams</a>
+            <a href="https://eduprov.com/exams.html" class="nav-item text-white nav-link active"><i class="fa fa-book"></i> Exams</a>
           </div>
      
         </div>
@@ -178,8 +180,8 @@
 
       <div class="col-md-8 mt-3 text-justify">
         <p>
-          EDUPROV is an esteemed name in Career Counselling, Overseas
-          Education & Admission Guidance, institute located in the heart of
+          <b>EDUPROV</b> is an esteemed name in <b>Career Counselling</b>, <b>Overseas
+          Education & Admission Guidance</b> institute located in the heart of
           Bengaluru. EDUPROV works to promote excellence in education and
           with our unique ability, our successful track record and continued
           growth, EDUPROV has developed to become one of the most active,
@@ -446,7 +448,7 @@
         <div class="col-xl-2 col-md-3 pt-4 order-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">USA Location</label>
-            <a href="sitemap.html" #id="footer-url" class="text-white"><li>Sitemap</li></a>
+            <a href="https://eduprov.com/sitemap.html" #id="footer-url" class="text-white"><li>Sitemap</li></a>
             <br/>
             <p>
               N.E Blaine Minnesota USA 55434<br />
@@ -532,26 +534,7 @@
     </footer>
   </div>
   <!--Footer End-->
-  <!--  <script>
-      const cookieBox = document.querySelector(".wrapper"),
-      acceptBtn = cookieBox.querySelector(".buttons button");
-
-      acceptBtn.onclick=()=>{
-        document.cookie="CookieBy=NaveenKumar; max-age="+60*60*24*30;
-        if(document.cookie){
-        cookieBox.classList.add("hide")
-        }else{
-          alert("Cookie can't be set!")
-        }
-      }
-      let checkCookie=document.cookie.indexOf("CookieBy=NaveenKumar");
-      checkCookie != -1 ? cookieBox.classList.add("hide"): cookieBox.classList.remove("hide");
-    </script>-->
-
-
+ 
 </body>
-
-<script src="main.js"></script>
 <script src="app.js"></script>
-
 </html>
