--- a/exams.html
+++ b/exams.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="canonical" href="" />
   <title>Exam Information Exam Fees Exam Eligibility Exam Pattern | Course</title>
-  <meta name="description" content="
+  <meta name="description" content="Exam Information Exam Fees Exam Pattern Eligibility 
     " />
   <meta name="keywords" content="
     
@@ -43,9 +43,9 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         
         <div class="navbar-nav ml-auto ">
-          <a href="index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-          <a href="contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-          <a href="student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+          <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+          <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-university"></i> Admission</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-users"></i> Counselling</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-globe"></i> Study Abroad</a>
@@ -90,7 +90,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/exams/kcet-exam.html" style="text-decoration: none;" class="icon-box text-center"
+            <a href="https://eduprov.com/exams/kcet-exam.html" style="text-decoration: none;" class="icon-box text-center"
               data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">KCET EXAM</label>
@@ -106,7 +106,7 @@
         </div>
         <div class="col-md-4">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="exams/neet-exam.html" style="text-decoration: none;" class="icon-box text-center"
+              <a href="https://eduprov.com/exams/neet-exam.html" style="text-decoration: none;" class="icon-box text-center"
                 data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">NEET EXAM</label>
