--- a/law.html
+++ b/law.html
@@ -5,12 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="canonical" href=" " />
   <title>Law Course Information Scope Exam Details | EDUPROV</title>
   <meta name="description" content="Degree law courses: Candidates can obtain either an integrated law degree such as BA LLB, BBA LLB, BSC LLB, BCom LLB etc
   " />
-<meta name="keywords" content="
-  
+<meta name="keywords" content="llb,llm,llb course,ba llb,law course,business law,llb degree,bba llb,llm course,study law,ba llb course,cyber law course,corporate law courses,bsc llb,bachelors of law,3 years llb,details of llb course,llm degree,llb law,diploma in law,graduate diploma in law,international business law,ba law,international law degree,medical law and ethics,business law course,diploma in labour law,media law and ethics,llm international law,lawsikho courses,law classes,comparative constitutional law,labour law courses,diploma in cyber law,law and psychology,international law courses,criminal law course,law science,llb llm,integrated law course,ma llb,law diploma courses,llm program,communication law,law certificate,bba law,law certificate courses,ma in law,llm criminal law,bba llb course,postgraduate law,diploma in corporate law,llb 5 years,llb university,llb course information,politics and law,criminal law courses online free,llb 3 year course,llb years,llb graduate,medical law courses,diploma in criminal law,llm in cyber law,llb study,btech llb,llb information,courses related to law,llb and llm,llb 5 year course,llb course year,about llb,corporate law courses online,bsc llb course,llm constitutional law,law classes near me,diploma in business law,cs llb,courses for law students,integrated llb,llb course information in marathi,5 years integrated law course,taxation law course,llb certificate,bca llb,law degree course,cyber law and ethics,arunachal law academy,1 year llm,ba legal studies,company law course,best law courses,ba llb degree,llb 1st year,ba llb integrated course,diploma in ipr,llm years,llb criminal law,llm one year course,llb diploma,law study course,llb year course,llb in corporate law,llb classes,llb for working professionals,intellectual property rights courses,bachelors of law degree,law course information,business law degree,law and criminology,llb law degree,business and law,undergraduate law degree,criminal law degree,employment law courses,tax llm,construction law courses,diploma in legal studies,qualifying law degree,diploma of legal services,business law class,postgraduate law degree,law school classes,business and law degree,law undergraduate,immigration law course,law and psychology degree,law school courses,commercial law courses,applied law,llm environmental law,law and criminology degree,law with business,graduate diploma of legal practice,constitutional law degree,graduate llb,llm tax law,cyber law degree,llm maritime law,llm medical law,law llm,international law studies,law and economics degree,bsc law,environmental law courses,barrister training course,ma law university of law,university of law llm,best llm,law course years,llm online programs,diploma in professional legal practice,advanced legal,aviation law course,criminal justice online courses,principles of business law,llm employment law,law with business degree,ba law degree,llm construction law,barrister course,sports law courses,intellectual property courses,family law courses,law certificate programs,computer science for lawyers,criminal justice diploma,postgraduate certificate in laws,diploma in law to llb,llm international tax law,university of law courses,llb program,advanced criminal law,llm health law,torts class,law with criminology degree,tax law courses,llm sports law,llm human rights law,llb jd,courses under law,2 year llb,llm family law,international law online courses,labour law short courses,graduate certificate in law,law undergraduate courses,university of law llb,best llm in the world,civil law course,medical law and ethics course,commercial law degree,health law and ethics,llm m,immigration law degree,intellectual property law courses,university of law ma law,international humanitarian law course,law and psychology dual degree,criminal law class,postgrad law,llb international law,llb education,postgraduate law courses,politics and law degree,ma llm,criminal law online courses,commercial law academy,law llb course,media law course,international business law course,law management course,fundamentals of criminal law,diploma courses in law for undergraduate,constitutional law class,graduate diploma in immigration and citizenship law,study immigration law,llm graduate,constitutional law course,international arbitration courses,bl llb,llm international trade law,property law degree,construction law courses online,undergraduate diploma in labour law,diploma in company law,llm in taxation law,llm law and technology,business and law courses,diploma in immigration law,llb 2 years course,law science and technology,llb diploma course,business law degree online,criminal justice online courses free,lawyer classes,diploma courses for law students,ma llb course,business law university,diploma in legal executive studies,international trade law course,llb postgraduate,llb study information,cyber law syllabus,llb full information,llb full details,cyber law course syllabus,llm information technology law,law study details,bsc llb course details,llm data protection law,data privacy llm,ba llb information,llb qualification details,llb course full information,full information about llb course,llm information,data law courses,information about dtl course,llm in cyber law syllabus,llb degree course details,
+
   " />
   <link rel="stylesheet" href="dist/css/bootstrap.css" />
   <link rel="stylesheet" href="faicon/css/all.css" />
@@ -44,9 +43,9 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         
         <div class="navbar-nav ml-auto ">
-          <a href="index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-          <a href="contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-          <a href="student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+          <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+          <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-university"></i> Admission</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-users"></i> Counselling</a>
           <a href="#" class="nav-item text-white nav-link active"><i class="fa fa-globe"></i> Study Abroad</a>
@@ -89,7 +88,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course/llb-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course/llb-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">LLB Bachelor of legislative law</label>
@@ -129,7 +128,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="/course//master-of-law-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/course//master-of-law-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Master of Law (LLM) </label>
